--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Smart Shark</a>
+        <img class="navbar-brand" style="height: 75px;" src="img/smart_shark_logo1.png" alt="Garcias Logo" href="index.html">
+      <!-- <a class="navbar-brand" href="index.html">Smart Shark</a> -->
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -39,13 +40,24 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="about.html">Intro to HTML</a>
+          </li>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <a class="nav-link" href="contact.html">Intro CSS</a>
+          </li>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">CSS Grid Layout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Bootstrap</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Responsive Design</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Intro to Git/Github</a>
           </li>
         </ul>
       </div>
