makes brand logo more visible when navbar is transparent

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <img class="navbar-brand" style="height: 75px;" src="img/smart_shark_logo1.png" alt="Garcias Logo" href="index.html">
+        <img class="navbar-brand" style="height: 75px;" src="img/smart_shark_logo2.png" alt="Smart Shark Logo" href="index.html">
       <!-- <a class="navbar-brand" href="index.html">Smart Shark</a> -->
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
