--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
   <hr>
 
   <!-- Footer -->
-  <footer>
+    <footer>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://twitter.com/cultivatecoders?lang=en" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -161,15 +161,17 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://cultivatecoders.com/" target="_blank">
                 <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                  <i class="fas fa-globe fa-stack-2x"></i>
+
+
+                  
                 </span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/Cult-Coders-FSB " target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse"></i>
@@ -177,7 +179,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2019</p>
+          <p class="copyright text-muted">Copyright &copy; Cultivating Coders 2019</p>
         </div>
       </div>
     </div>
