--- a/CSSpage.html
+++ b/CSSpage.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Smart Shark</a>
+        <img class="navbar-brand" style="height: 75px;" src="img/smart_shark_logo2.png" alt="Smart Shark Logo" href="index.html">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -51,7 +51,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1> Cascading Style</h1>
-            <span class="subheading">Style is more than the pants you wear, CowDaddy.</span>
+            <span class="subheading">Style is more than the pants you wear.</span>
           </div>
         </div>
       </div>
