--- a/htmltags.html
+++ b/htmltags.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Smart-Shark</a>
+    <img class="navbar-brand" style="height: 75px;" src="img/smart_shark_logo2.png" alt="Smart Shark Logo" href="index.html">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -115,7 +115,7 @@
 <p>
 [del] - this tag is used to mark items that are being deleted
 </p>
-[li] - this tag is used to list things like this: 
+[li] - this tag is used to list things like this:
 </p>
   <hr>
 
