updated navbar and branding logo

--- a/index.html
+++ b/index.html
@@ -40,24 +40,33 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Intro to HTML</a>
+            <a class="nav-link" href="history.html">Intro to HTML</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="htmltags.html">HTML Tags</a>
           </li>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Intro CSS</a>
+            <a class="nav-link" href="CSSpage.html">Intro CSS</a>
           </li>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">CSS Grid Layout</a>
+            <a class="nav-link" href="aboutCSSgl.html">CSS Grid Layout</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Bootstrap</a>
+            <a class="nav-link" href="bstrap.html">Twitter Bootstrap</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Responsive Design</a>
+            <a class="nav-link" href="responsive.html">Responsive Design</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Intro to Git/Github</a>
+            <a class="nav-link" href="intro-to-git.html">Intro to Git/Github</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Terminal.html">Command Line</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="intro-to-git.html">Intro to Git/Github</a>
           </li>
         </ul>
       </div>
@@ -166,7 +175,7 @@
                   <i class="fas fa-globe fa-stack-2x"></i>
 
 
-                  
+
                 </span>
               </a>
             </li>
