--- a/intro-to-git.html
+++ b/intro-to-git.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Starting Git/Github</a>
+      <img class="navbar-brand" style="height: 75px;" src="img/smart_shark_logo2.png" alt="Smart Shark Logo" href="index.html">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -66,7 +66,7 @@
         <h1>What is version control?</h1>
         <!-- start of the first point -->
         <p>
-          Version control is a task of keeping a software system that may consist of many versions and configurations that are well organized. Version control software keeps track of every modification to the code in a special kind of database. If an unwanted version of the code is sent to the Version Control System's database it keeps track of the previous version so that the change can be fixed or simply left out. 
+          Version control is a task of keeping a software system that may consist of many versions and configurations that are well organized. Version control software keeps track of every modification to the code in a special kind of database. If an unwanted version of the code is sent to the Version Control System's database it keeps track of the previous version so that the change can be fixed or simply left out.
         </p><!-- end of paragraph one-->
 
           <p>The advantages of this type of software are having the ability to have a team simultaneously work on a project together. Without software like version control, making large scale changes to your project could be risky if they break or if you can't always be in the same room as your team.  Version control systems allow you to compare files, identify differences, and merge the changes if needed before committing any code.
@@ -84,17 +84,17 @@
 
         <p>Add: "git add" begins to add files to the staging area. There are multiple ways of using this tag.  "git add filename-1.txt filename-2.txt" Here we are adding multiple files at once</p>
 
-        <p>Commit:  this is the last step in the git workflow. A commit permanently stores changes from the staging area inside the repository.  
+        <p>Commit:  this is the last step in the git workflow. A commit permanently stores changes from the staging area inside the repository.
 
         1)prior to this you must add a mesage and to do so the command is "git commit -m "Here's the example". Here the "-m" stands for message. Your message should be within quotation marks, written in the present tense and within 50 characters. </p>
 
-        <p>Push: The git push command is used to upload local repository content to a remote repository.  The git push is most commonly used to publish and upload local changes to a central repository. After a local repository has been modified a push is executed to share the modifications with remote team members.git add brncgit status  
+        <p>Push: The git push command is used to upload local repository content to a remote repository.  The git push is most commonly used to publish and upload local changes to a central repository. After a local repository has been modified a push is executed to share the modifications with remote team members.git add brncgit status
 
-          1)git push &lt;remote&gt; &lt;branch&gt;: Here you are pushing the specified barnch to &lt;remote&gt;. This creates a local brach in the destinantion repository. Git will prevent the push if it threatens overwriting commits in the desitination repository. 
+          1)git push &lt;remote&gt; &lt;branch&gt;: Here you are pushing the specified barnch to &lt;remote&gt;. This creates a local brach in the destinantion repository. Git will prevent the push if it threatens overwriting commits in the desitination repository.
 
-           2)git push &lt;remote&gt; --force: Same as the above command but will force the push disregaring overwrites. 
+           2)git push &lt;remote&gt; --force: Same as the above command but will force the push disregaring overwrites.
 
-            3)git push &lt;remote&gt; --all: Push all of your local branches to the specified remote.  
+            3)git push &lt;remote&gt; --all: Push all of your local branches to the specified remote.
 
               4)git push &lt;remote&gt; --tags Push won't automatically send all of your tags along with the local branches. This command will send all tags to the remote repository.</p>
               <!-- end of references -->
@@ -109,14 +109,14 @@
           <li>Untracked: the file exists, but is not part of git's version control.
           </li>
 
-          <li>Staged: the file has been added to Git's version control but changes have not been committed. 
+          <li>Staged: the file has been added to Git's version control but changes have not been committed.
           </li>
-          
+
           <li>Committed: the change has been committed to the newest version of the "final product" because nothing is truly finished or perfect in code.
           </li>
-       </ol> 
+       </ol>
        <!-- end of ordered list -->
-       
+
        <h3>Here are some of the commands that enact those stages of Git. </h3>
        <!-- start of the fourth point -->
 
