--- a/htmltags.html
+++ b/htmltags.html
@@ -28,7 +28,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-    <img class="navbar-brand" style="height: 75px;" src="img/smart_shark_logo2.png" alt="Smart Shark Logo" href="index.html">
+    <a href="index.html"><img class="navbar-brand" style="height: 75px;" src="img/smart_shark_logo2.png" alt="Smart Shark Logo" href="index.html"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -37,6 +37,35 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="history.html">Intro to HTML</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="htmltags.html">HTML Tags</a>
+          </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="CSSpage.html">Intro CSS</a>
+          </li>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="aboutCSSgl.html">CSS Grid Layout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="bstrap.html">Twitter Bootstrap</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="responsive.html">Responsive Design</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="intro-to-git.html">Intro to Git/Github</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Terminal.html">Command Line</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="intro-to-git.html">Intro to Git/Github</a>
           </li>
         </ul>
       </div>
@@ -121,40 +150,43 @@
 
   <!-- Footer -->
   <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2019</p>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <ul class="list-inline text-center">
+          <li class="list-inline-item">
+            <a href="https://twitter.com/cultivatecoders?lang=en" target="_blank">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://cultivatecoders.com/" target="_blank">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-globe fa-stack-2x"></i>
+
+
+
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://github.com/Cult-Coders-FSB " target="_blank">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+        </ul>
+        <p class="copyright text-muted">Copyright &copy; Cultivating Coders 2019</p>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
+
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
