Smart Shark CSS page

--- a/CSSstyle.html
+++ b/CSSstyle.html
@@ -36,25 +36,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Intro to HTML</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">CSS Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="post.html">CSS Selectors, Properties, and Values</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Twitter Bootstrap</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Responsive Design</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Git/Github</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">CSS Grid Layout</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
         </ul>
       </div>
@@ -68,7 +50,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>CSS Style</h1>
+            <h1>CSS</h1>
             <span class="subheading">Selectors, Properties, and Values</span>
           </div>
         </div>
