--- a/Smart-Shark-CSS.html
+++ b/Smart-Shark-CSS.html
@@ -63,12 +63,12 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <h2>Selectors, Properties, and Values</h2>
-        <p>CSS is all about style, but we also have to have a way to link what we write in HTML to our CSS style script. This is where selectors come in handy. 
+        <p>CSS is all about style, but we also have to have a way to link what we write in HTML to our CSS script. This is where selectors come in handy. 
 </p>
         <p>A selector is used to denote the element that you would like to style. The most common ones that we use are div class and div id tags. When the class tag is used, the selector is noted as a (.) before the chosen classs word. When the id tag is used we refer to it in css with a #. 
         For example, < div class= hello > would be written as .hello in CSS. </p>
         <p>After selectors are specified, properties come next. These help make your page more appealing with color, font, and photo adjustments. Some basic properties that we learn are background-color, border-color, font-size, and many more. With properties, you can change the way words and photos are placed on your page. 
-</p><p>Values are the last important part to your CSS style sheet. Values tell the browser how items should appear on the page. There are many default values that we can use in our code, like colors or fonts, some of which require numerical values. 
+</p><p>Values are the last important part to your style sheet. Values tell the browser how items should appear on the page. There are many default values that we can use in our code, like colors or fonts, some of which require numerical values. 
 </p>
       </div>
     </div>
