--- a/intro-to-git.html
+++ b/intro-to-git.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>Clean Blog - Welcome to Git/Github</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,28 +38,11 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">Intro to HTML</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="post.html">Intro to CSS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">CSS Grid Layout</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Bootstrap</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Responsive Design</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Intro to Git/Github</a>
-          </li>
         </ul>
       </div>
     </div>
   </nav>
+<!-- end of nav bar -->
 
   <!-- Page Header -->
   <header class="masthead" style="background-image: url('img/about-bg.jpg')">
